# mapDemo

./: .gitignore  README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best-sim-opt-fp16.param  best_cpu.param  yolov5s-opt.param
app/src/main/java/com/tencent/yolov5ncnn/: Audio.java  BleLowEnergy.java  Businfo.java  Businformation.java  CameraCapture.java  CaneAuxiliaryApplication.java  GodeLocation.java  MainActivity.java  Obstacle.java  POIRequest.java  PaddleOCRNcnn.java  Surroundings.java  Trafficlight.java  TrafficlightColorDetector.java  YoloV5Ncnn.java  profile.java
app/src/main/java/com/tencent/yolov5ncnn/ui/configmenu/: AboutFragment.java  PersonalprofileFragment.java
app/src/main/java/com/tencent/yolov5ncnn/ui/dashboard/: DashboardFragment.java  DashboardViewModel.java  MyRecyclerCardviewAdapter.java
app/src/main/java/com/tencent/yolov5ncnn/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/com/tencent/yolov5ncnn/ui/notifications/: MyRecyclerconfigviewAdapter.java  NotificationsFragment.java  NotificationsViewModel.java
app/src/main/java/com/tencent/yolov5ncnn/ui/surroundings/: SensorEventHelper.java  SurroundingsFragment.java
app/src/main/jni/: CMakeLists.txt  yolov5ncnn_jni.cpp
app/src/main/res/layout/: fragment_home.xml
app/src/main/res/layout/layout/: fragment_home.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: provider_paths.xml
